--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-member">
-                        <img src="./images/Mark_Guerrero.jpg" class="team-photo" width="264" alt="Mark Guerrero">
+                        <img src="./images/Mark_Guerrero1x.jpg" class="team-photo" width="264" alt="Mark Guerrero">
                         <div class="team-info">
                             <h3 class="team-name">Mark Guerrero</h3>
                             <p class="team-role">Product Designer</p>
@@ -153,7 +153,7 @@
                         </div>
                     </li>
                     <li class="team-member">
-                        <img src="./images/Tom_Ford.jpg" class="team-photo" width="264" alt="Tom Ford">
+                        <img src="./images/Tom_Ford1x.jpg" class="team-photo" width="264" alt="Tom Ford">
                         <div class="team-info">
                             <h3 class="team-name">Tom Ford</h3>
                             <p class="team-role">Frontend Developer</p>
@@ -190,7 +190,7 @@
                         </div>
                     </li>
                     <li class="team-member">
-                        <img src="./images/Camila_Garcia.jpg" class="team-photo" width="264" alt="Camila Garcia">
+                        <img src="./images/Camila_Garcia1x.jpg" class="team-photo" width="264" alt="Camila Garcia">
                         <div class="team-info">
                             <h3 class="team-name">Camila Garcia</h3>
                             <p class="team-role">Marketing</p>
@@ -227,7 +227,7 @@
                         </div>
                     </li>
                     <li class="team-member">
-                        <img src="./images/Daniel_Wilson.jpg" class="team-photo" width="264" alt="Daniel Wilson">
+                        <img src="./images/Daniel_Wilson1x.jpg" class="team-photo" width="264" alt="Daniel Wilson">
                         <div class="team-info">
                             <h3 class="team-name">Daniel Wilson</h3>
                             <p class="team-role">UI Designer</p>
@@ -272,7 +272,7 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Banking_App.jpg" class="portfolio-image" width="360" alt="Banking App">
+                            <img src="./images/Banking_App1x.jpg" class="portfolio-image" width="360" alt="Banking App">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -284,7 +284,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Cashless_Payment.jpg" class="portfolio-image" width="360"
+                            <img src="./images/Cashless_Payment1x.jpg" class="portfolio-image" width="360"
                                 alt="Cashless Payment">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -297,7 +297,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Meditation_App.jpg" class="portfolio-image" width="360"
+                            <img src="./images/Meditation_App1x.jpg" class="portfolio-image" width="360"
                                 alt="Meditation App">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -310,7 +310,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Taxi_Service.jpg" class="portfolio-image" width="360" alt="Taxi Service">
+                            <img src="./images/Taxi_Service1x.jpg" class="portfolio-image" width="360"
+                                alt="Taxi Service">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -322,7 +323,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Screen_Illustrations.jpg" class="portfolio-image" width="360"
+                            <img src="./images/Screen_Illustrations1x.jpg" class="portfolio-image" width="360"
                                 alt="Screen Illustrations">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -335,7 +336,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-owerlay-container">
-                            <img src="./images/Online_Courses.jpg" class="portfolio-image" width="360"
+                            <img src="./images/Online_Courses1x.jpg" class="portfolio-image" width="360"
                                 alt="Online Courses">
                             <p class="portfolio-owerlay-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -457,7 +458,8 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the <a href="" class="modal-privacy-link">Privacy Policy</a>
+                        I accept the terms and conditions of the <a href="" class="modal-privacy-link">Privacy
+                            Policy</a>
                     </label>
                 </div>
                 <button type="submit" class="button-send-modal">Send</button>
