--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
             </form>
         </div>
     </div>
+    <script src="./js/modal-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 
