--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
             </address>
-            <div class="burger-menu" data-modal-open>
+            <div class="burger-menu" data-modal-open-menu>
                 <div class="burger-container-icon">
                     <button type="button" class="button-burger-menu">
                         <svg class="burger-icon" width="24" height="24">
@@ -418,7 +418,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop-menu" data-modal-open-menu>
+    <div class="backdrop-menu" data-modal-menu>
         <div class="modal-menu">
             <button type="button" class="modal-close-menu" data-modal-close-menu>
                 <svg class="button-icon-modal-close" width="8" height="8">
@@ -525,8 +525,11 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the <a href="" class="modal-privacy-link">Privacy
-                            Policy</a>
+                        <span>
+                            I accept the terms and conditions of the
+                            <a href="" class="modal-privacy-link">Privacy
+                                Policy</a>
+                        </span>
                     </label>
                 </div>
                 <button type="submit" class="button-send-modal">Send</button>
